# TipIndia

./: .gitignore  README.md
api/: pyproject.toml
api/src/: main.py
api/src/database/: database.db
api/src/routing/: app.py
api/src/routing/routes/: employees.py  login.py  tips.py
api/src/utils/: auth.py  db.py  models.py
app/: index.html  openapi.json  package-lock.json  package.json
app/src/: main.tsx  routes.tsx
app/src/auth/: useAuth.ts
app/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
app/src/components/: ErrorRoute.tsx  Loader.css  Loader.tsx  Root.tsx
app/src/pages/: Customer.tsx  CustomerPayment.tsx  EmployeeRegister.tsx  Home.tsx  Manager.tsx
app/src/queries/: queries.tsx
