[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Raviish Panicker <panicker.raviish2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
